--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -1,3 +1,40 @@
-LATIHAN
-222262402109
-HARUS BISA DI PUSH
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>membuat layout menggunakan bootstrap5</title>
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+    crossorigin="anonymous"
+    />
+    <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
+    crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+            <h1 class="fw-light">HGCDKJTY</h1>
+            <P CLASS="TEXT-BODY-SECONDARY">
+                lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                , when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+            </P>
+            <a class="btn btn-primary BTN-SM
+            MY-1">LEARN MORE</a>
+              <a class="btn btn-primary BTN-SM
+            MY-1">BTN TEXT-BODY-SECONDARY</a>
+              <a class="btn btn-primary BTN-SM
+            MY-1">LOREM IPSIM</a>
+            </div>
+        </div>
+    </div>
+  </body>
+</html>
+
